Creato componente per la visualizzazione dei ticket

--- a/AWSLambdaServiceAFP-App/src/app/app.component.html
+++ b/AWSLambdaServiceAFP-App/src/app/app.component.html
@@ -5,3 +5,6 @@
 <div *ngFor="let t of ticket">
   <p>Ticket N°: {{t.id}} per l'ospedale di {{t.hospital}}</p>
 </div>
+
+
+<app-tickettable></app-tickettable>
