Importato angular material e creata mat table per la visualizzazione dei dati

--- a/AWSTicketing-App/src/app/app.component.html
+++ b/AWSTicketing-App/src/app/app.component.html
@@ -1,6 +1,12 @@
 <h1>{{title}}</h1>
 
-<button (click)="executeGet()">GET</button>
+<!-- <button (click)="executeGet()">GET</button>
 <button (click)="executeInsert()">INSERT</button>
 <button (click)="executeUpdate()">UPDATE</button>
-<button (click)="executeDelete()">DELETE</button>
+<button (click)="executeDelete()">DELETE</button> -->
+
+<!-- <ul *ngFor="let ticket of ticketList">
+  <li>ID: {{ticket.id}} - Username: {{ticket.username}} - Reparto: {{ticket.department}} - Descrizione: {{ticket.description}}</li>
+</ul> -->
+
+<app-tickettable></app-tickettable>
