--- a/AWSTicketing-App/src/app/tickettable/tickettable.component.html
+++ b/AWSTicketing-App/src/app/tickettable/tickettable.component.html
@@ -1,37 +1,84 @@
 <div class="example-container mat-elevation-z8">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+  </mat-form-field>
 
+  <mat-table #table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
 
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-</mat-form-field>
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+    </ng-container>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!-- username Column -->
+    <ng-container matColumnDef="username">
+      <mat-header-cell *matHeaderCellDef> Username </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
+    </ng-container>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+    <!-- ip_caller Column -->
+    <ng-container matColumnDef="ip_caller">
+      <mat-header-cell *matHeaderCellDef> IP Caller </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.ip_caller}} </mat-cell>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="username">
-    <th mat-header-cell *matHeaderCellDef> Username </th>
-    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-  </ng-container>
+    <!-- ip_server Column -->
+    <ng-container matColumnDef="ip_server">
+      <mat-header-cell *matHeaderCellDef> IP Server </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.ip_server}} </mat-cell>
+    </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="patient">
-    <th mat-header-cell *matHeaderCellDef> Patient </th>
-    <td mat-cell *matCellDef="let element"> {{element.patient}} </td>
-  </ng-container>
+    <ng-container matColumnDef="url_path_server">
+      <mat-header-cell *matHeaderCellDef> URL Server Path </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.url_path_server}} </mat-cell>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <ng-container matColumnDef="patient">
+      <mat-header-cell *matHeaderCellDef> Patient </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.patient}} </mat-cell>
+    </ng-container>
 
-  <!-- Row shown when there is no matching data. -->
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-  </tr>
-</table>
+    <ng-container matColumnDef="hospital">
+      <mat-header-cell *matHeaderCellDef> Hospital </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.hospital}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="department">
+      <mat-header-cell *matHeaderCellDef> Department </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.department}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="valid">
+      <mat-header-cell *matHeaderCellDef> Valid </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.valid}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+      <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
+      <mat-cell *matCellDef="let element"><button mat-button (click)="executeUpdate(element)">EDIT</button></mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+      <mat-cell *matCellDef="let element"><button mat-button (click)="executeDelete(element)">DELETE</button></mat-cell>
+      <!-- <mat-icon class="mat-18">delete</mat-icon> -->
+    </ng-container>
+
+    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      (click)="clickedRows = row"
+      *matRowDef="let row; columns: displayedColumns;"
+  ></tr> -->
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 </div>
